# jpdict

./: .gitignore  Cargo.toml  README.md  ToDo.md  fetchdata.sh  schema.sql  sql.sql  sql_used.sql  test.xml  test_nodoc.xml
src/: jmdict.rs  jmserde.rs  jmxml.rs  lib.rs  main.rs  sql.rs
