[package]
name = "jpdict"
version = "0.1.0"
edition = "2024"

[dependencies]
clap            = { version = "4.5.48", features = ["derive"] }
reqwest         = { version = "0.12.23", features = ["blocking"] }
serde           = "1.0.228"
serde-xml-rs    = { version = "0.8.1" }
sqlx            = "0.8.6"
quick-xml       = "0.38.3"
